force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__DF1071_Pricing_Var_Index_Name__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__DF1071_Pricing_Var_Index_Name__c</fullName>
    <description>The system automatically populates this optional picklist field to indicate the variable rate index name. By default, it is empty.</description>
    <inlineHelpText>Select a value to indicate the variable rate index name.</inlineHelpText>
    <label>Variable Rate Index Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>1 - Wall Street Journal Prime</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2 - 6-month CD rate</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3 - 1-year T-Bill</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4 - 3-year T-Bill</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>5 - 5-year T-Note</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>6 - 12-month average of 10-year T-Bill</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>7 - Cost of Funds Index (COFI) - National</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>8 - Cost of Funds Index (COFI) - 11th District</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>9 - Constant Maturity Treasury (CMT)</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>10 - Internal Proprietary Index</label>
            </value>
            <value>
                <fullName>977</fullName>
                <label>977 - Other</label>
            </value>
            <value>
                <fullName>999</fullName>
                <label>999 - Not applicable</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>