force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__DF1071_Pricing_Var_Index_Name_FF__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__DF1071_Pricing_Var_Index_Name_FF__c</fullName>
    <description>The system automatically populates this optional text field to specify the other variable index name. By default, it is empty.</description>
    <inlineHelpText>Use this field to specify the other variable index name.</inlineHelpText>
    <label>Variable Index Name Free Form</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>