force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__DF1071_Pricing_Var_Margin__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__DF1071_Pricing_Var_Margin__c</fullName>
    <description>The system automatically populates this optional text field with a percentage to specify the variable interest rate margin. By default, it is empty.</description>
    <inlineHelpText>Use this field to specify the variable interest rate margin.</inlineHelpText>
    <label>Variable Interest Rate Margin</label>
    <length>10</length>
    <type>Text</type>
</CustomField>