force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__DF1071_UID__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__DF1071_UID__c</fullName>
    <description>The system automatically populates this optional text field to store the unique identification of an application in a financial institution. By default, it is empty.</description>
    <inlineHelpText>Stores the unique identification of an application in a financial institution.</inlineHelpText>
    <label>DF1071 UID</label>
    <length>45</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>