force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__Earliest_Closing_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Earliest_Closing_Date__c</fullName>
    <description>Users populate this optional date field to indicate the earliest possible closing date for the loan. By default, this field is blank.</description>
    <inlineHelpText>Enter the earliest possible closing date for the loan.</inlineHelpText>
    <label>Earliest Closing Date</label>
    <type>Date</type>
</CustomField>