force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__Estimated_Closing_Costs_Expiration__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Estimated_Closing_Costs_Expiration__c</fullName>
    <description>The system automatically populates this optional field to indicate the expiration date and time of the estimated closing costs. By default, this field is blank.</description>
    <inlineHelpText>This field displays the expiration date and time of the estimated closing costs.</inlineHelpText>
    <label>Estimated Closing Costs Expiration</label>
    <type>DateTime</type>
</CustomField>