force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__HMDA_AUS__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__HMDA_AUS__c</fullName>
    <description>This is a required field. This field indicates the automated underwriting system(s) (AUS) used by your institution to evaluate the application by entering up to five (5) of the applicable.</description>
    <label>Automated Underwriting System</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>