force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__HMDA_Business_Or_Commercial_Purpose__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__HMDA_Business_Or_Commercial_Purpose__c</fullName>
    <description>This is a required field.  This field indicates whether the covered loan is, or the application is for a covered loan that will be made, primarily for a business or commercial purpose.</description>
    <label>Business or Commercial Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>