force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__HMDA_Denial_Reasons__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__HMDA_Denial_Reasons__c</fullName>
    <description>This is a required field. This field indicates the principal reason, or reasons, for denial. For 2017 reporting, you may enter up to three (3) applicable Codes. For 2018 reporting, you may enter up to four (4) applicable Codes.</description>
    <label>Denial Reasons</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>