force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__HMDA_Gross_Annual_Income__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__HMDA_Gross_Annual_Income__c</fullName>
    <description>Users populate this optional currency field to indicate the gross annual income the system uses to process the application and make the credit decision for HMDA reportable loans. By default, this field is blank.</description>
    <inlineHelpText>Enter the gross annual income the system uses to process the application and make the credit decision for HDMA reportable loans.</inlineHelpText>
    <label>Gross Annual Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>