force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__HMDA_Initially_Payable_To__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__HMDA_Initially_Payable_To__c</fullName>
    <description>This is a required field.  This field indicates whether the obligation arising from the covered loan was, or, in the case of an application, would have been, initially payable to your institution.</description>
    <label>Initially Payable To</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>