force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__HMDA_Interest_Only_Payments__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__HMDA_Interest_Only_Payments__c</fullName>
    <description>This is a required field. This field indicates whether the contractual terms include, or would have included, interest-only payments.</description>
    <label>Interest-Only Payments</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>