force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__HMDA_Lien_Status__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__HMDA_Lien_Status__c</fullName>
    <description>This is a required field.  This field indicates whether the property is a first or subordinate lien.</description>
    <inlineHelpText>For every originated loan or application, report whether the loan is secured by a first or subordinate lien on a dwelling or is not secured by a dwelling.</inlineHelpText>
    <label>Lien Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>