force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__HMDA_Other_Non_Amortizing_Features__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__HMDA_Other_Non_Amortizing_Features__c</fullName>
    <description>This is a required field.  This field indicates whether the contractual terms include, or would have included, any term, other than those described in Paragraphs 1003.4(a)(27)(i), (ii), and (iii) that would allow for payments other than fully amortizing payments during the loan term.</description>
    <label>Other Non-amortizing Features</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>