force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__HMDA_Property_Securing_Construct_Method__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__HMDA_Property_Securing_Construct_Method__c</fullName>
    <description>This is a required field.  This field indicates whether the dwelling is site-built or a manufactured home.</description>
    <label>Property Securing Construction Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>