force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__HMDA_Property_Securing_Manufactured_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__HMDA_Property_Securing_Manufactured_Type__c</fullName>
    <description>This is a required field. This field indicates whether the covered loan or application is, or would have been, secured by a manufactured home and land, or by a manufactured home and not land.</description>
    <label>Property Securing Manufactured Home Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>