force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__HMDA_Property_Securing_Occupancy__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__HMDA_Property_Securing_Occupancy__c</fullName>
    <description>This is a required field. This field indicates whether the property will be Owner-occupied as a principal dwelling, Not owner-occupied or N/A. This field will be used to capture occupancy information prior to 1/1/2018.</description>
    <label>Property Securing Occupancy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>