force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__HMDA_Reported_Total_Points_Fees__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__HMDA_Reported_Total_Points_Fees__c</fullName>
    <description>The system automatically populates this optional formula field to indicate the total points and fees for a HMDA reportable loan. The system queries the Total Points and Fees field on Loan Compliance to populate this field. If Total Points and Fees is blank, the system populates this field with a value of NA.</description>
    <formula>IF(LLC_BI__Loan__r.LLC_BI__Product_Reference__r.LLC_BI__Product_Feature__r.LLC_BI__Is_Subject_To_TRID_Tolerances__c, IF(NOT(ISBLANK(LLC_BI__Total_Points_And_Fees__c)), IF(MOD(LLC_BI__Total_Points_And_Fees__c , 1) = 0, TEXT(LLC_BI__Total_Points_And_Fees__c) &amp; &quot;.00&quot;, IF(MOD(LLC_BI__Total_Points_And_Fees__c , 1) * 100 &lt; 10, TEXT(ROUND(LLC_BI__Total_Points_And_Fees__c ,0)) &amp; &quot;.0&quot; &amp; TEXT(ROUND(MOD(LLC_BI__Total_Points_And_Fees__c , 1), 2) * 100), TEXT(FLOOR(LLC_BI__Total_Points_And_Fees__c )) &amp; &quot;.&quot; &amp; TEXT(MIN(ROUND(MOD(LLC_BI__Total_Points_And_Fees__c , 1), 2) * 100, 99)))), &apos;NA&apos;), &apos;NA&apos;)</formula>
    <inlineHelpText>This system-populated formula field indicates the total points and fees for HMDA reportable loans.</inlineHelpText>
    <label>Reported Total Points and Fees</label>
    <type>Text</type>
</CustomField>