force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__HMDA_Reverse_Mortgage__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__HMDA_Reverse_Mortgage__c</fullName>
    <description>This is a required field.  This field indicates whether the covered loan is, or the application is for, a reverse mortgage.</description>
    <label>Reverse Mortgage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>